--- a/Job_Search_Recommender_System.ipynb
+++ b/Job_Search_Recommender_System.ipynb
@@ -146,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Develop search engine with LinkedIn dataset using BM-25F approach"
+        "###Develop search engine using BM-25F approach"
       ],
       "metadata": {
         "id": "r8UjXtm7zgBq"
@@ -632,7 +632,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Applying to Glassdoor webscraping dataset using TF-IDF Approach"
+        "###Develop search engine using TF-IDF approach"
       ],
       "metadata": {
         "id": "AyJJ8ffly6Pc"
