--- a/Job_Search_Recommender_System.ipynb
+++ b/Job_Search_Recommender_System.ipynb
@@ -158,7 +158,7 @@
         "id": "255q2ZrIhjhg"
       },
       "source": [
-        "# load in dataset of Excel spreadsheet with Data Science related jobs from previous LinkedIn webscraping\n",
+        "# load in dataset of Excel spreadsheet with Data Science related jobs from previous LinkedIn & Glassdoor webscraping\n",
         "df = pd.read_excel('LinkedIn Job Data_Data Scientist in Canada.xlsx')\n",
         "df2 = pd.read_csv('glassdoor job data.csv')\n",
         "df2 = df2.drop(columns=['company_starRating', 'company_roleLocation']).rename(columns={\"companyName\": \"Company\", \"company_offeredRole\": \"Title\", \"listing_jobDesc\": \"Description\", \"requested_url\": \"Link\"})\n",
@@ -644,7 +644,7 @@
         "id": "ECCWDnHzpega"
       },
       "source": [
-        "Find similar jobs from one of the job posts in Glassdoor dataset"
+        "Find similar jobs from LinkedIn & Glassdoor dataset using TF-IDF"
       ]
     },
     {
